fix alignment of zoom buttons and legend in compare mode
fixes #32

--- a/app/components/Map/style.css
+++ b/app/components/Map/style.css
@@ -64,7 +64,8 @@ button.filter {
   }
 }
 
-.countryView {
+.countryView,
+.compareView {
   .leaflet-bottom {
     margin-bottom: 212px;
   }
